objects/Callout_Properties__mdt.object
<CustomObject>
    <fields>
        <fullName>Callout__c</fullName>
        <label>Callout</label>
        <referenceTo>Callout__mdt</referenceTo>
        <relationshipLabel>Callouts Properties</relationshipLabel>
        <relationshipName>Callouts_Properties</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>Custom_Property__c</fullName>
        <label>Custom Property</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Disabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Disabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Key__c</fullName>
        <label>Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Body</fullName>
                </value>
                <value>
                    <fullName>Header</fullName>
                    <default>true</default>
                    <label>Header</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Callout Properties</label>
    <pluralLabel>Callouts Properties</pluralLabel>
</CustomObject>